Floating carbs and other adjustments for oref
autoISF output in Orefs rT.reason


incorporate orefs Floating Carbs and establish toggle in Prefs

output in debugging & Suggestion
filter messages
reintroduce SMB delivery ration in Prefs

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 build/
 DerivedData/
 R.generated.swift
+*-old
 
 ## Various settings
 !default.mode1v3
@@ -28,6 +29,7 @@ xcuserdata/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
+Change source code in Oref0*
 
 ## Obj-C/Swift specific
 *.hmap
