--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ build/
 DerivedData/
 R.generated.swift
 *-old
+ProfileSwitching/setting*
+secret/
+middleware.js
 
 ## Various settings
 !default.mode1v3
